--- a/n1920.html
+++ b/n1920.html
@@ -61,7 +61,7 @@
     <div class="wrapper" style="display: flex">
       <img class="nav" src="./nav1.svg" alt="" />
       <div>
-        <img class="xiu" src="./xyi.svg" alt="" />
+        <img class="xiu" src="./cc.png" alt="" />
         <div class="anys">
           <h1 style="margin-top: 50px">Обо мне</h1>
           <h2>Создаю интерфейсы / сайты, которые решают проблемы</h2>
