--- a/n1440.html
+++ b/n1440.html
@@ -47,6 +47,8 @@
       }
       .pdidi {
         font-weight: 300;
+        max-width: 559px;
+        margin-right: 129px;
         font-size: 16;
         opacity: 0.75;
       }
